# db_section_2

./: .gitignore  .pre-commet-config.yaml  .template.env  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/core/: parser.py  settings.py
app/core/db/: db_helper.py
app/core/db/models/: base.py  spimex_trading_results.py
app/ioc/: init_container.py  providers.py
core/: settings.py
