[tool.poetry]
name = "db-section-2"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
load-dotenv = "^0.1.0"
sqlalchemy = "^2.0.41"
aiohttp = "^3.12.14"
beautifulsoup4 = "^4.13.4"
dishka = "^1.6.0"
lxml = "^6.0.0"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
